# citera

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
citera/: __init__.py  cli.py
citera/ai/: __init__.py
citera/commands/: archive.py  new.py  promote.py  set.py
citera/core/: constants.py  env.py  ids.py  paths.py
